bug do scrollbar

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -11,7 +11,7 @@
 .Mosaico-container {
   display: flex;
   transform: translateX(-50%);
-  left: 50vw;
+  left: 50%;
   position: relative;
   width: @mosaico-width;
   height: @mosaico-height;
